@@ -23,6 +23,9 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2001-10-10  Cristy  <cristy@mystic.es.dupont.com>
+	* Fixed seg-fault for PingImage() on a JP2 image file.
+
 2001-10-07  Cristy  <cristy@mystic.es.dupont.com>
 	* CloneImage() now uses a referenced counted pixel cache.
 
